--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ markdown: kramdown
 permalink: none
 twitter_username: ristohietal
 github_username: rhietala
+future: true
 kramdown:
   parse_block_html: true
 gems:
