rename the blog
probably won't have time for machine learning any time soon

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Embedded to machine learning
+title: Risto Hietala
 description: >
-  Setting up a Raspberry Pi sensor environment and teaching myself and the machine with it
+  Cool stuff about computers
 baseurl: ""
 #url: "http://localhost:4000" # for local jekyll
 url: "http://www.hietala.org"
